--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 
+1.3:    2015-Dec-20
+    * Added -w switch to produce Windows-compatible archives.
+
 1.2:    2015-Dec-20
     * Fix encoding detection bug.
     * Properly set directories permissions.
