--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 
+1.4:    2015-Dec-21
+    * Stopped using UTF-8-MAC, because it does more damage than good.
+
 1.3:    2015-Dec-20
     * Added -w switch to produce Windows-compatible archives.
 
